--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			margin: 0;
 			font-family: Horizon;
 			color: white;
+			scroll-behavior: smooth;
 		}
 		body{
 			background-color: #171720;
@@ -1165,3 +1166,4 @@
 	</script>
 	<script>// SkillProgress(chartClass, chartBarClass, labelClass, startDelay, timeAnimation);
 SkillProgress(".chart", ".chart_bar", ".label", 100, 1500);</script>
+
