--- a/index.html
+++ b/index.html
@@ -604,10 +604,10 @@
 			     style="display:none">
 			</a>
 			<a href="http://unitegallery.net">
-			<img alt="Nobara"
+			<img alt="Brothers Forever"
 			     src="Imagenes/2D/Miniaturas/37.jpg"
 				  data-image="Imagenes/2D/37.jpg"
-			     data-description="Nobara"
+			     data-description="Brothers Forever"
 			     style="display:none">
 			</a>
 				<a href="http://unitegallery.net">
@@ -744,10 +744,10 @@
 			     style="display:none">
 			</a>
 			<a href="http://unitegallery.net">
-			<img alt="DAASKULL"
+			<img alt="LADY"
 			     src="Imagenes/2D/Miniaturas/33.jpg"
 				  data-image="Imagenes/2D/33.jpg"
-			     data-description="DAASKULL"
+			     data-description="LADY"
 			     style="display:none">
 			</a>
 			<a href="http://unitegallery.net">
@@ -1166,4 +1166,5 @@
 	</script>
 	<script>// SkillProgress(chartClass, chartBarClass, labelClass, startDelay, timeAnimation);
 SkillProgress(".chart", ".chart_bar", ".label", 100, 1500);</script>
+
 
