--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,7 @@
 			margin: 0;
 			font-family: Horizon;
 			color: white;
+			scroll-behavior: smooth;
 		}
 		body{
 			background-color: #171720;
