--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
 			</div>
 			<div class="skill-item">
 				<div class="skill-header">
-					<span class="skill-title">DaVinci Rewsolve</span>
+					<span class="skill-title">DaVinci Resolve</span>
 					<span class="skill-percentage">80%</span>
 				</div>
 				<div class="skill-bar-bg">
