--- a/index.html
+++ b/index.html
@@ -1089,6 +1089,11 @@
              	data-type="youtube"
              	data-videoid="g39bIvHLUDo"
             	data-description="Kinetic">
+
+			<img alt="Menu & HUD"
+             	data-type="youtube"
+             	data-videoid="6k7HXmMwhX4"
+            	data-description="Menu & HUD">
 		</div>
 	</section>
 	<div id="about" class="titulos">
